updated git ignore to exclude report commit

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+playwright-report
+allure-report
+allure-test-results
+test-results
